# Vision

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  generate_project_files.bat
.github/workflows/: clang-format-cheker.yml  linux-build.yml  windows-build.yml  windows-test-runner.yml
Automation/: automation.py  build.bat
Automation/CMAKE/: CMakeHelpers.cmake
Automation/ConanProfiles/: linuxDebug  linuxRelease
Engine/: .clang-format  CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  Utility.h
Engine/Source/Log/: Log.cpp  Log.h
Engine/Tests/: LogConceptsTest.cpp
